--- a/config/content.htm
+++ b/config/content.htm
@@ -17,8 +17,8 @@
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
 from browser import html, document
-# 建立 url 變數與網站中 2a 學員的學號與帳號資料 URL 網誌字串對應
-url = "https://mde.tw/list/2a.txt"
+# 建立 url 變數與網站中 2b 學員的學號與帳號資料 URL 網誌字串對應
+url = "https://mde.tw/list/2b.txt"
 # 利用 open() 物件中的 readlines() 方法, 取出網站中的資料並逐行放入數列中, 因此 data 的資料型別為數列
 data = open(url).readlines()
 # 進行資料查驗時, 印出 data 數列內容
@@ -32,20 +32,20 @@ print("總共有 " + str(len(all_stud)) + "名學員")
 brython_div1 = document["brython_div1"]
 # 利用 Brython 的 "&lt;=" 特殊符號, 將右值帶有字串與超文件內容物件插入 brython_div1 變數所指定的位置
 # 其中利用 html.A 建立 anchor 標註物件, 第一個變數為 anchor 字串, 第二個變數則為 hyper text reference
-brython_div1 &lt;= "1. " + html.A("2a-ag4", href="https://mdecd2025.github.io/2a-ag4/")+ html.A("(repo)", href="https://github.com/mdecd2025/2a-ag4")
+brython_div1 &lt;= "1. " + html.A("2b-g8", href="https://mdecd2025.github.io/2b-g8/")+ html.A("(repo)", href="https://github.com/mdecd2025/2b-g8")
 # 利用 html.BR() 插入 break 標註
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "2. " + html.A("41223118", href="https://mdecd2025.github.io/hw-zhe41223118/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-zhe41223118")
+brython_div1 &lt;= "2. " + html.A("41071203", href="https://mdecd2025.github.io/hw-41071203/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41071203")
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "3. " + html.A("41223122", href="https://mdecd2025.github.io/hw-41223122/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223122")
+brython_div1 &lt;= "3. " + html.A("41071204", href="https://mdecd2025.github.io/hw-41071204/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41071204")
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "4. " + html.A("41223131", href="https://mdecd2025.github.io/hw-41223131/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223131")
+brython_div1 &lt;= "4. " + html.A("41071202", href="https://mdecd2025.github.io/hw-41071202/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41071202")
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "5. " + html.A("41223134", href="https://mdecd2025.github.io/hw-41223134/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223134")
+brython_div1 &lt;= "5. " + html.A("41023215", href="https://mdecd2025.github.io/hw-41023215/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41023215")
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "6. " + html.A("41223136", href="https://mdecd2025.github.io/hw-41223136/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223136")
+brython_div1 &lt;= "6. " + html.A("41023216", href="https://mdecd2025.github.io/hw-41023216/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41023216")
 brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "7. " + html.A("41223158", href="https://mdecd2025.github.io/hw-41223158/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223158")</pre>
+brython_div1 &lt;= "7. " + html.A("41023213", href="https://mdecd2025.github.io/hw-41023213/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41023213")</pre>
 <div class="line number1 index0 alt2"><code class="py comments"></code></div><h1>Homework</h1>
 <p>作業 (30%)</p>
 <p>HW1 (5%): <span style="background-color: #ffff00;">建立由 Box 組成的平面四連桿機構 Webots 模擬場景</span></p>
