--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -17,8 +17,8 @@
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
 from browser import html, document
-# 建立 url 變數與網站中 2a 學員的學號與帳號資料 URL 網誌字串對應
-url = "https://mde.tw/list/2a.txt"
+# 建立 url 變數與網站中 2b 學員的學號與帳號資料 URL 網誌字串對應
+url = "https://mde.tw/list/2b.txt"
 # 利用 open() 物件中的 readlines() 方法, 取出網站中的資料並逐行放入數列中, 因此 data 的資料型別為數列
 data = open(url).readlines()
 # 進行資料查驗時, 印出 data 數列內容
