--- a/config/content.htm
+++ b/config/content.htm
@@ -12,7 +12,13 @@
 <p style="padding-left: 30px;">Homework (30%) - 每週至少提交兩次與課程進度有關的內容, 完成後填回自評表單</p>
 <p style="padding-left: 30px;">Exam (40%) - 建立包含操作流程影片、心得以及提供檔案下載的網頁後填回自評表單</p>
 <p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p>
-<h1>List</h1>
+<p><br/><br/><br/></p>
+<p></p>
+<h1>Tasks</h1>
+<div>
+<h2>task1</h2>
+<h3>list</h3>
+<p>程式碼</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
 # 而所導入的 document 可以指向網頁中的特定 id 內容
 from browser import html, document
@@ -45,12 +51,8 @@ brython_div1 &lt;= html.BR()
 brython_div1 &lt;= "6. " + html.A("41071204", href="https://mdecd2025.github.io/hw-41071204/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41071204")
 brython_div1 &lt;= html.BR()
 brython_div1 &lt;= "7. " + html.A("41071202", href="https://mdecd2025.github.io/hw-41071202/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41071202")</pre>
-<p><br/><br/><br/></p>
 <p></p>
-<h1>Tasks</h1>
-<div>
-<h2>task1</h2>
-<h3>list</h3><h2>task2</h2>
+<h2>task2</h2>
 <h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
