--- a/config/content.htm
+++ b/config/content.htm
@@ -87,7 +87,7 @@ def on_complete(req):
                 repo_link = html.SPAN("空")
             brython_div1 <= html.SPAN(f"{idx}. ") + website_link + " | " + repo_link + html.BR()
         brython_div1 <= html.BR() + html.HR() + html.BR()
-        brython_div1 <= html.SPAN("小組連結及組員連結:") + html.BR() + html.BR()
+        brython_div1 <= html.SPAN("小組:") + html.BR() + html.BR()
 
         brython_div1 <= "1. " + html.A("2b-g1", href="https://mdecd2025.github.io/2b-g1/") + " " + html.A("(repo)", href="https://github.com/mdecd2025/2b-g1") + html.BR()
         brython_div1 <= "2. " + html.A("2b-g2", href="https://mdecd2025.github.io/2b-g2/") + " " + html.A("(repo)", href="https://github.com/mdecd2025/2b-g2") + html.BR()
