--- a/config/content.htm
+++ b/config/content.htm
@@ -106,7 +106,7 @@ def on_complete(req):
 ajax.get(url, oncomplete=on_complete)
 </script>
 <div id="brython_div1"></div><h2>task2</h2>
-<h2>task3</h2>
+<h3>w3</h3><h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
