--- a/content/list.html
+++ b/content/list.html
@@ -230,7 +230,8 @@ def on_complete(req):
 
 ajax.get(url, oncomplete=on_complete)
 </script>
-<div id="brython_div1"></div><br />task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
+<div id="brython_div1"></div>
+<br />task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
         
     <!-- footer -->
       <div class="container">
