--- a/content/task2.html
+++ b/content/task2.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">list << <a href='list.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>task2</h1>
-<br />list << <a href='list.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<p>test</p><br />list << <a href='list.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
