--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -108,9 +108,7 @@ ajax.get(url, oncomplete=on_complete)
 </script>
 <div id="brython_div1"></div>
 <h2>task2</h2>
-<p>test</p>
-<p><span>test</span></p>
-<p><span>test</span></p><h3>w3</h3>
+<p></p><h3>w3</h3>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <script>
@@ -241,9 +239,6 @@ def main():
     a_member_data = fetch_member_data(url_a)
     b_member_data = fetch_member_data(url_b)
 
-    # 檢查 A 組：缺少對應學號的及錯組（未在預期 A 組中且未出現在 B 組資料中）
-    list_missing_by_github(a_all_github, a_member_data, "A 組")
-    check_wrong_group_by_github(a_all_github, a_member_data, b_member_data, "A 組")
 
     # 檢查 B 組：以相同方式進行缺少對應學號及錯組檢查
     list_missing_by_github(b_all_github, b_member_data, "B 組")
@@ -252,7 +247,7 @@ def main():
 # 執行主流程
 main()
 </script>
-<div id="brython_div1"></div><h2>task3</h2>
+<div id="brython_div1"><a href="https://mdecd2025.github.io/hw-41071203/content/Brython?src=https://gist.githubusercontent.com/41071203/450e084a3008cfbc17a7654571cadcd3/raw/177f6f470de0cafa6bf9ea9a3b957a5b075e98f5/CompareData.py">Brython版本</a></div><h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
