--- a/content/HW4.html
+++ b/content/HW4.html
@@ -2,7 +2,7 @@
         <head>
         <title>cd_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,20 +142,85 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Midterm << <a href='Midterm.html'>Previous</a> <a href='Exam1.html'>Next</a> >> Exam1<br /><h1>Exam</h1>
-<p>Exam1 (10%): 建立 Webots 基本物件模擬場景</p>
-<p style="padding-left: 30px;">各學員利用 Webots R2025a 套件中的 Shape 物件, 隨堂建立指定的機電系統模擬場景, 並利用 Python 程式進行互動控制.</p>
-<p>Exam2 (10%): 利用 CAD 零組件建立模擬場景 </p>
-<p style="padding-left: 30px;">各學員利用 CAD (Solvespace 與 NX2312), 隨堂建立指定的系統模型零組件後, 導入 Webots R2025a 後, 建立機電系統模擬場景, 並利用 Python 程式進行互動控制.</p>
-<p>Exam3 (20%): Webots 機電模擬場景的協同設計</p>
-<p style="padding-left: 30px;">各分組利用 CAD (Solvespace 與 NX2312), 隨堂建立指定的系統模型零組件後, 導入 Webots R2025a 後, 建立機電系統模擬場景, 並利用 Python 程式進行互動控制. 過程中各學員必須採同步協同模式, 維護從 Github Classroom 取得的分組協同倉儲以及網站.</p>
-<p style="padding-left: 30px;">協同分組方式:</p>
-<ol>
-<li>分配學員負責利用 Solvespace 建立系統零組件, 過程中必須將所建構之零組件檔案與繪圖過程影片上傳至分組網頁.</li>
-<li>分配學員負責利用 NX2312 建立系統零組件, 過程中必須將所建構之零組件檔案與繪圖過程影片上傳至分組網頁.</li>
-<li>分配學員負責利用 Webots 建立機電系統模擬場景, 並利用 Python 程式進行控制, 過程中必須將建構過程拍成帶有說明字幕的影片上傳至分組網頁.</li>
-</ol>
-<br />Midterm << <a href='Midterm.html'>Previous</a> <a href='Exam1.html'>Next</a> >> Exam1</div>
+    <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>HW4</h1>
+<script src="./../cmsimde/static/brython.js"></script>
+<script src="./../cmsimde/static/brython_stdlib.js"></script>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import document, html, ajax
+from browser.timer import set_timeout
+
+# 目標 div
+div = document["brython_div1"]
+
+# IPv6 基礎位址
+base_ip = "2001:288:6004:17:fff1:cd25:0000:b"
+port = 8000
+
+# 學員學號列表
+student_numbers = [
+    40923137, 41023114, 41023205, 41023206, 41023210, 41023213, 41023215, 41023216,
+    41023218, 41023232, 41023237, 41071202, 41071203, 41071204, 41223201, 41223202,
+    41223203, 41223205, 41223206, 41223207, 41223208, 41223209, 41223210, 41223211,
+    41223212, 41223214, 41223215, 41223216, 41223217, 41223218, 41223219, 41223220,
+    41223221, 41223222, 41223223, 41223224, 41223225, 41223226, 41223227, 41223228,
+    41223229, 41223230, 41223231, 41223232, 41223233, 41223234, 41223235, 41223236,
+    41223237, 41223239, 41223240, 41223242, 41223243, 41223244, 41223245, 41223246,
+    41223247, 41223248, 41223249, 41223250, 41223251, 41223252, 41223253, 41271217,
+    41271236, 41271237
+]
+
+# 儲存無法連結的學員
+failed_students = []
+
+# 檢查成功與完成請求的計數器
+success_count = 0
+completed_requests = 0
+
+def check_url(student_id, url):
+    def on_complete(req):
+        global success_count, completed_requests
+        completed_requests += 1
+        if req.status == 200:
+            success_count += 1
+            div <= html.DIV(f"{student_id}: Pass")
+        else:
+            failed_students.append(student_id)
+            div <= html.DIV(f"{student_id}: Failed (Status: {req.status})")
+        # 當所有檢查完成時顯示結果
+        if completed_requests == len(student_numbers):
+            div <= html.HR()
+            if failed_students:
+                div <= html.DIV("無法連結的學員學號:")
+                for failed_id in failed_students:
+                    div <= html.DIV(failed_id)
+            else:
+                div <= html.DIV("所有學員網站均可連結")
+
+    # 發送 AJAX 請求
+    req = ajax.ajax()
+    req.bind('complete', on_complete)
+    req.open('GET', url, True)
+    req.send()
+
+# 生成並檢查每個學員的連結
+for i, student_id in enumerate(student_numbers, 1):
+    ip_suffix = f"{i:03d}"
+    full_ip = f"{base_ip}{ip_suffix}"
+    url = f"http://[{full_ip}]:{port}/content/About.html"
+    link = html.A(f"{student_id}", href=url, target="_blank")
+    div <= link
+    div <= html.BR()
+    # 使用顯式函式傳遞參數
+    def timeout_callback(s=student_id, u=url):
+        check_url(s, u)
+    set_timeout(timeout_callback, i * 100)
+</script>
+<div id="brython_div1"></div><br />task3 << <a href='task3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
