--- a/content/w3.html
+++ b/content/w3.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='w3.html'>w3</a></li></ul><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='w3.html'>w3</a></li></ul><li class='has-children'><a href='task3.html'>task3</a><ul class='dropdown'><li><a href='HW4.html'>HW4</a></li></ul><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -279,8 +279,31 @@ def main():
     list_missing_by_github(b_all_github, b_member_data, "B 組")
     check_wrong_group_by_github(b_all_github, b_member_data, a_member_data, "B 組")
 
+
 # 執行主流程
 main()
+
+# 取得目標 div
+div = document["brython_div1"]
+
+# 基本 IPv6 前綴
+base_ip = "2001:288:6004:17:fff1:cd25:0:b"
+port = "8000"
+
+# 產生 66 個連結 (從 b001 到 b066)
+for i in range(1, 67):  # 1 到 66
+    # 格式化學員編號為三位數 (001-066)
+    student_num = f"{i:03d}"
+    # 完整的 IPv6 位址
+    full_ip = f"{base_ip}{student_num}"
+    # 完整的 URL
+    url = f"http://[{full_ip}]:{port}"
+    
+    # 建立連結元素
+    link = html.A(f"學員 {student_num}", href=url, target="_blank")
+    # 每個連結後加入換行
+    div <= link
+    div <= html.BR()
 </script>
 <div id="brython_div1"></div><br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
         
