--- a/content/task3.html
+++ b/content/task3.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='w3.html'>w3</a></li></ul><li class='has-children'><a href='task3.html'>task3</a><ul class='dropdown'><li><a href='HW4.html'>HW4</a></li></ul><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='IPV6.html'>IPV6</a><li><a href='w3.html'>w3</a></li></ul><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,86 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='HW4.html'>Next</a> >> HW4<br /><h1>task3</h1>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='HW4.html'>Next</a> >> HW4</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
+<script src="./../cmsimde/static/brython.js"></script>
+<script src="./../cmsimde/static/brython_stdlib.js"></script>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+<script type="text/python3">
+from browser import document, html, ajax
+from browser.timer import set_timeout
+
+# 目標 div
+div = document["brython_div1"]
+
+# IPv6 基礎位址
+base_ip = "2001:288:6004:17:fff1:cd25:0000:b"
+port = 8000
+
+# 學員學號列表
+student_numbers = [
+    40923137, 41023114, 41023205, 41023206, 41023210, 41023213, 41023215, 41023216,
+    41023218, 41023232, 41023237, 41071202, 41071203, 41071204, 41223201, 41223202,
+    41223203, 41223205, 41223206, 41223207, 41223208, 41223209, 41223210, 41223211,
+    41223212, 41223214, 41223215, 41223216, 41223217, 41223218, 41223219, 41223220,
+    41223221, 41223222, 41223223, 41223224, 41223225, 41223226, 41223227, 41223228,
+    41223229, 41223230, 41223231, 41223232, 41223233, 41223234, 41223235, 41223236,
+    41223237, 41223239, 41223240, 41223242, 41223243, 41223244, 41223245, 41223246,
+    41223247, 41223248, 41223249, 41223250, 41223251, 41223252, 41223253, 41271217,
+    41271236, 41271237
+]
+
+# 儲存無法連結的學員
+failed_students = []
+
+# 檢查成功與完成請求的計數器
+success_count = 0
+completed_requests = 0
+
+def check_url(student_id, url):
+    def on_complete(req):
+        global success_count, completed_requests
+        completed_requests += 1
+        if req.status == 200:
+            success_count += 1
+            div <= html.DIV(f"{student_id}: Pass")
+        else:
+            failed_students.append(student_id)
+            div <= html.DIV(f"{student_id}: Failed (Status: {req.status})")
+        # 當所有檢查完成時顯示結果
+        if completed_requests == len(student_numbers):
+            div <= html.HR()
+            if failed_students:
+                div <= html.DIV("無法連結的學員學號:")
+                for failed_id in failed_students:
+                    div <= html.DIV(failed_id)
+            else:
+                div <= html.DIV("所有學員網站均可連結")
+
+    # 發送 AJAX 請求
+    req = ajax.ajax()
+    req.bind('complete', on_complete)
+    req.open('GET', url, True)
+    req.send()
+
+# 生成並檢查每個學員的連結
+for i, student_id in enumerate(student_numbers, 1):
+    ip_suffix = f"{i:03d}"
+    full_ip = f"{base_ip}{ip_suffix}"
+    url = f"http://[{full_ip}]:{port}/content/About.html"
+    link = html.A(f"{student_id}", href=url, target="_blank")
+    div <= link
+    div <= html.BR()
+    # 使用顯式函式傳遞參數
+    def timeout_callback(s=student_id, u=url):
+        check_url(s, u)
+    set_timeout(timeout_callback, i * 100)
+</script>
+<div id="brython_div1"></div>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
