新增操作影片

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -109,6 +109,7 @@ ajax.get(url, oncomplete=on_complete)
 <div id="brython_div1"></div>
 <h2>task2</h2>
 <h3>IPV6</h3>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/eLxXgpoN6eo?si=sdd_dl6ZAi7DP8yX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe><br/>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <script>
@@ -186,6 +187,7 @@ for i, student_id in enumerate(student_numbers, 1):
         check_url(s, u)
     set_timeout(timeout_callback, i * 100)
 </script>
+</p>
 <div id="brython_div1"></div><h3>w3</h3>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -349,8 +351,8 @@ for i in range(1, 67):  # 1 到 66
     div <= link
     div <= html.BR()
 </script>
-<div id="brython_div1"></div><h2>task3</h2>
-<h3>HW4</h3>
+<div id="brython_div1"></div>
+<h2>task3</h2>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <script>
@@ -428,7 +430,8 @@ for i, student_id in enumerate(student_numbers, 1):
         check_url(s, u)
     set_timeout(timeout_callback, i * 100)
 </script>
-<div id="brython_div1"></div><h2>task4</h2>
+<div id="brython_div1"></div>
+<h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
 <div class="line number1 index0 alt2"><code class="py comments"></code></div>
