使用 SSH 協定執行作業倉儲的推送操作影片新增

--- a/config/content.htm
+++ b/config/content.htm
@@ -108,7 +108,9 @@ ajax.get(url, oncomplete=on_complete)
 </script>
 <div id="brython_div1"></div>
 <h2>task2</h2>
-<h3>IPV6</h3>
+<h4><strong>使用 SSH 協定執行作業倉儲的推送操作影片</strong></h4>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/_zHEvS-p3ZI?si=O60uWllqDPJobbWS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
+<p><strong></strong></p><h3>IPV6</h3>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/eLxXgpoN6eo?si=sdd_dl6ZAi7DP8yX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe><br/>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
