HW1作動影片與原始檔上傳

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -355,7 +355,7 @@ for i in range(1, 67):  # 1 到 66
 </script>
 <div id="brython_div1"></div>
 <h2>task3</h2><h2>task4</h2>
-<h3>w4</h3>
+<h3>w5</h3>
 <p>Webots連接練習示範影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/73vdtErA2tI?si=VN-eGWVLXphHcNH_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p><h2>task5</h2>
 <h2>task6</h2>
@@ -390,8 +390,8 @@ for i in range(1, 67):  # 1 到 66
 <h2>HW1</h2>
 <p>HW1 (5%): <span style="background-color: #ffff00;">建立由 Box 組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW1 - 學員學號</p>
-<p></p>
-<h2>HW2</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/EjyxnDhToeA?si=3w78g4pWykd7mJn6" title="YouTube video player" width="560"></iframe></p>
+<h2><a href="/downloads/worlds.zip">四連桿機構原始檔</a></h2><h2>HW2</h2>
 <p>HW2 (5%): <span style="background-color: #ffff00;">建立由 CAD 繪製零件組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 學員學號</p>
 <p></p>
