--- a/content/IPV6.html
+++ b/content/IPV6.html
@@ -222,7 +222,8 @@ for i, student_id in enumerate(student_numbers, 1):
     set_timeout(timeout_callback, i * 100)
 </script>
 </p>
-<div id="brython_div1"></div><br />task2 << <a href='task2.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<div id="brython_div1"></div>
+<br />task2 << <a href='task2.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
