--- a/config/content.htm
+++ b/config/content.htm
@@ -110,7 +110,8 @@ ajax.get(url, oncomplete=on_complete)
 <h2>task2</h2>
 <h4><strong>使用 SSH 協定執行作業倉儲的推送操作影片</strong></h4>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/_zHEvS-p3ZI?si=O60uWllqDPJobbWS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
-<p><strong></strong></p><h3>IPV6</h3>
+<p><strong></strong></p>
+<h3>IPV6</h3>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/eLxXgpoN6eo?si=sdd_dl6ZAi7DP8yX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe><br/>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -190,7 +191,8 @@ for i, student_id in enumerate(student_numbers, 1):
     set_timeout(timeout_callback, i * 100)
 </script>
 </p>
-<div id="brython_div1"></div><h3>w3</h3>
+<div id="brython_div1"></div>
+<h3>w3</h3>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <p><a href="https://mdecd2025.github.io/hw-41071203/content/Brython?src=https://gist.githubusercontent.com/41071203/450e084a3008cfbc17a7654571cadcd3/raw/177f6f470de0cafa6bf9ea9a3b957a5b075e98f5/CompareData.py">Brython版本</a></p>
@@ -354,10 +356,12 @@ for i in range(1, 67):  # 1 到 66
     div <= html.BR()
 </script>
 <div id="brython_div1"></div>
-<h2>task3</h2><h2>task4</h2>
+<h2>task3</h2>
+<h2>task4</h2>
 <h3>w5</h3>
 <p>Webots連接練習示範影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/73vdtErA2tI?si=VN-eGWVLXphHcNH_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p><h2>task5</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/73vdtErA2tI?si=VN-eGWVLXphHcNH_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
+<h2>task5</h2>
 <h2>task6</h2>
 <div class="line number1 index0 alt2"><code class="py comments"></code></div>
 <h1>Homework</h1>
@@ -390,7 +394,8 @@ for i in range(1, 67):  # 1 到 66
 <h2>HW1</h2>
 <p>HW1 (5%): <span style="background-color: #ffff00;">建立由 Box 組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW1 - 學員學號</p>
-<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/EjyxnDhToeA?si=3w78g4pWykd7mJn6" title="YouTube video player" width="560"></iframe></p>
+<a href="/downloads/worlds.zip">四連桿機構原始檔</a>
 <h2>HW2</h2>
 <p>HW2 (5%): <span style="background-color: #ffff00;">建立由 CAD 繪製零件組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 學員學號</p>
