--- a/content/task3.html
+++ b/content/task3.html
@@ -142,7 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1><br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
